# rotors

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: Cargo.toml
examples/src/helloworld/: client.rs  proto.rs  server.rs
examples/src/streaming/: client.rs  proto.rs  server.rs
rotors/: Cargo.toml
rotors-macros/: Cargo.toml
rotors-macros/src/: client.rs  codegen.rs  descriptor.rs  lib.rs  server.rs
rotors/src/: codec.rs  lib.rs
