[workspace]
members = ["examples", "rotors-macros", "rotors"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Mattia Penati <mp@hypermynds.com>", "Francesco Cattoglio <fc@hypermynds.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/hypermynds/rotors"
repository = "https://github.com/hypermynds/rotors"

[workspace.dependencies]
rotors-macros = { path = "./rotors-macros", version = "0.1.0" }
tonic = { version = "0.10", default-features = false }
tonic-build = { version = "0.10", default-features = false }
