[package]
name = "examples"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "streaming-client"
path = "src/streaming/client.rs"

[[bin]]
name = "streaming-server"
path = "src/streaming/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[dependencies]
h2 = "0.3"
rotors = { path = "../rotors" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic = { workspace = true, features = ["codegen", "transport"] }
