[package]
name = "rotors-macros"
description = "macros for rotors"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rotors-macros"

[lib]
proc_macro = true

[dependencies]
heck = "0.4"
proc-macro2 = "1"
quote = "1"
syn = {version = "2", features= ["extra-traits"]}
tonic-build = { version = "0.9", default-features = false }

[features]
default = []
transport = ["tonic-build/transport"]
