[package]
name = "rotors"
description = "tonic-based RPC library"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rotors"
keywords = ["rpc", "tonic", "cbor", "async"]
categories = ["web-programming", "network-programming", "asynchronous"]

[dependencies]
bytes = "1"
ciborium = "0.2"
rotors-macros.workspace = true
serde = "1"
tonic.workspace = true

[features]
default = ["transport"]
transport = ["rotors-macros/transport"]
